--- a/index.html
+++ b/index.html
@@ -741,7 +741,7 @@
     stage.addEventListener("touchend", ()=>{ gesture.active = false; });
     stage.addEventListener("touchcancel", ()=>{ gesture.active = false; });
 
-    // ✅ FIX: 做一个“tap 判定”，避免轻微移动造成逻辑混乱
+    // ✅ tap 判定：避免轻微移动造成混乱
     let stageTap = { down:false, x:0, y:0, id:null };
     const TAP_MOVE_THRESHOLD = 10;
 
@@ -749,10 +749,8 @@
       if (e.target.closest(".topbar") || e.target.closest("#editbar") || e.target.closest("#libPanel")) return;
       if (!video.srcObject) { showHint("先点 Start Camera", 900); return; }
 
-      // 如果点到贴纸，让贴纸自己的 pointerdown 处理
       if (e.target.closest(".sticker")) return;
 
-      // 如果在深度编辑中，点空白退出深度编辑
       if (editbar.style.display === "flex") {
         editbar.style.display = "none";
         paintUndoStack = [];
@@ -765,7 +763,6 @@
       stageTap.y = e.clientY;
       stageTap.id = e.pointerId;
 
-      // RECT / DRAW 继续走原来的按住拖拽逻辑
       if (captureMode !== "mp"){
         e.preventDefault();
         pointerDown = true;
@@ -779,11 +776,9 @@
         showROI(roi);
         if (captureMode === "draw") drawPathPreview(path);
       }
-
     }, { passive:false });
 
     stage.addEventListener("pointermove", (e)=>{
-      // RECT/DRAW 拖拽
       if (!pointerDown || !startPt) return;
       e.preventDefault();
 
@@ -815,7 +810,7 @@
     }, { passive:false });
 
     stage.addEventListener("pointerup", async (e)=>{
-      // ✅ FIX: MP 模式在 pointerup 做 tap 判定，然后触发分割（不会被“取消选中”抢走）
+      // ✅ MP：pointerup 做 tap 判定 -> 触发分割
       if (captureMode === "mp"){
         if (stageTap.down && e.pointerId === stageTap.id){
           const dx = e.clientX - stageTap.x;
@@ -824,14 +819,13 @@
           stageTap.down = false;
 
           if (!moved){
-            // MP 点一下就分割；不再自动 deselect
             await handleMediaPipeTap(e);
           }
         }
         return;
       }
 
-      // RECT/DRAW 原逻辑
+      // RECT/DRAW：原逻辑
       if (!pointerDown) return;
       e.preventDefault();
       pointerDown = false;
@@ -893,6 +887,9 @@
       showHint("截取完成：按住拖动移动；双指旋转缩放；Edit 深度编辑", 1200);
     }
 
+    // =========================
+    // ✅ MP：永远保留你点到的物体（自动判断需不需要反转）
+    // =========================
     async function handleMediaPipeTap(e){
       e.preventDefault?.();
       if (!interactiveSegmenter) { showHint("模型未就绪", 800); return; }
@@ -911,7 +908,6 @@
       try{
         const relativeX = (clientX - rect.left) / rect.width;
         const relativeY = (clientY - rect.top) / rect.height;
-
         console.log("relative", relativeX, relativeY);
 
         const result = await new Promise(resolve => {
@@ -939,10 +935,41 @@
 
         const imgData = fctx.getImageData(0,0,w,h);
         const pixels = imgData.data;
-        const maskData = result.categoryMask.getAsFloat32Array();
 
-        for (let i=0;i<maskData.length;i++){
-          if (maskData[i] < 0.4) pixels[i*4+3] = 0;
+        // 1) 读 mask：优先 Uint8（更像类别），否则 Float32（0~1）
+        let maskData = null;
+        let isUintMask = false;
+        try{
+          if (result.categoryMask.getAsUint8Array){
+            maskData = result.categoryMask.getAsUint8Array();
+            isUintMask = true;
+          } else {
+            maskData = result.categoryMask.getAsFloat32Array();
+          }
+        } catch {
+          maskData = result.categoryMask.getAsFloat32Array();
+        }
+
+        // 2) 用“点击点”判断是否需要反转
+        const TH = 0.4;
+        const mx = Math.max(0, Math.min(w - 1, Math.floor(relativeX * w)));
+        const my = Math.max(0, Math.min(h - 1, Math.floor(relativeY * h)));
+        const mi = my * w + mx;
+
+        const clickedVal = maskData[mi];
+        const clickedIsFG_byDefault = isUintMask ? (clickedVal > 0) : (clickedVal >= TH);
+
+        // 如果点击点会被删掉，就反转（确保保留点击物体）
+        const invert = !clickedIsFG_by_default(clickedIsFG_by_default);
+
+        function clickedIsFG_by_default(v){ return v; } // 只是为了让下面一行更不容易被你误改
+
+        // 3) 应用 mask：保留“点击物体”那一侧
+        for (let i = 0; i < w * h; i++){
+          const v = maskData[i];
+          const isFG = isUintMask ? (v > 0) : (v >= TH);
+          const keep = invert ? !isFG : isFG;
+          if (!keep) pixels[i*4 + 3] = 0;
         }
         fctx.putImageData(imgData, 0,0);
 
@@ -953,6 +980,7 @@
           return;
         }
 
+        // map video pixels -> stage css px (object-fit cover)
         const sw = stage.clientWidth, sh = stage.clientHeight;
         const videoAspect = w / h;
         const stageAspect = sw / sh;
@@ -970,8 +998,8 @@
           offsetX = (sw - drawW)/2;
         }
 
-        let nx = trimmed.dataset.originX / w;
-        const ny = trimmed.dataset.originY / h;
+        let nx = Number(trimmed.dataset.originX) / w;
+        const ny = Number(trimmed.dataset.originY) / h;
         const nw = trimmed.width / w;
         const nh = trimmed.height / h;
 
